<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.kev.pokermvc.controller.ResultActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/CPR"
                android:id="@+id/txvCPR"
                android:gravity="center"
                android:paddingTop="50dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/edtCPR"
                android:paddingTop="50dp"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/CSI"
                android:id="@+id/txvCSI"
                android:gravity="center"
                android:paddingTop="50dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/edtCSI"
                android:gravity="center"
                android:paddingTop="50dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/PN"
                android:id="@+id/txvPN"
                android:gravity="center"
                android:paddingTop="50dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/edtPN"
                android:paddingTop="50dp"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tblPowerNumbers"
                android:foreground="@color/colorPrimary"></TableLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>
